<resources>
    <string name="app_name">Sao</string>

    <!-- Menu -->
    <string name="menu_home">Accueil</string>
    <string name="menu_bars">Mes bars</string>
    <string name="menu_consumption">Mes consommations</string>
    <string name="menu_payment">Moyen de paiement</string>
    <string name="menu_stats">Statistique</string>
    <string name="menu_type_settings">Aide et paramètres</string>
    <string name="menu_settings">Paramètre de l\'application</string>
    <string name="menu_help">Paramètre de l\'application</string>
    <string name="menu_condition">Condition et règlements</string>
    <string name="menu_problem">Signaler un problème</string>
    <string name="menu_about">A propos</string>
    <string name="menu_logout">Deconnexion</string>

    <!-- Home activity -->
    <string name="home_name">Accueil</string>

    <!-- Bar Details -->
    <string name="bar_details_point"> points</string>
    <string name="bar_details_order">CONSULTER VOTRE COMMANDE</string>

    <!-- Order Details -->
    <string name="orderDetailsConfirm">CONFIRMER</string>
    <string name="confirm_info">En réalisant cette commande, j\'accepte les conditions générales de vente</string>
    <string name="confirm_info1">J\'accepte et je demande à ce que vous exécutiez la commande avant la fin de la période de révocation. Je suis au courant qu\'après exécution complète du service je perdrait mon droit de rescision.</string>
    <string name="change_order">Voules-vous modifier votre commande en cours?</string>
    <string name="order_step_text">Etat de votre commande: </string>
    <string name="barCatalog">CATALOGUE DU BAR</string>
    <string name="order_name">Ma commande</string>
    <string name="btn_no_bar">Vous devez être dans un bar pour effectuer une commande.</string>
    <string name="order_step_in_progress">Commande en cours de préparation.</string>
    <string name="order_step_ready">Commande prête, vous pouvez la récupérer.</string>
    <string name="order_step_validate">Aucune commande en cours</string>

    <!-- Bar info Activity-->
    <string name="bar_info_title">Informations</string>
    <string name="bar_news_title">News</string>
    <string name="bar_friend_title">Friends</string>

    <!-- Login Activity -->
    <string name="btn_sign_up">Connexion</string>
    <string name="connect_progress">Connexion en cours</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_email">E-mail</string>
    <string name="forget_password">Mot de passe oublié ?</string>
    <string name="err_msg_mail">Adresse mal invalide</string>
    <string name="err_msg_password">Entrer votre mot de passe</string>

    <!-- Bar notification service -->
    <string name="notification_welcome">Appuyez pour effectuer une commande !</string>
    <string name="notification_no_oder">Aucune commande en cours</string>
    <string name="notification_order_in_progress">Votre commande est en cours de traitement</string>
    <string name="notification_order_finish">Votre commande est prête. Vous pouvez la récupérer</string>

    <!-- Settings Activity-->
    <string name="settings_activity">A propos</string>

    <!-- About Activity-->
    <string name="about_title">A propos</string>

    <!-- Notification Activity-->
    <string name="notification_title">Notifications</string>

    <!-- Payment Activity -->
    <string name="no_card_yet">Vous n\'avez pas de carte bancaire enregistrée. Cliquez suir le bouton \"+\" pour en enregistrer une nouvelle.</string>

    <!-- Failure retrieve data-->
    <string name="failure_data">Erreur pendant le chargement des données</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_bar_info">BarInfoActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_notification_setting">NotificationSettingActivity</string>
    <string name="title_activity_condition">ConditionActivity</string>
    <string name="title_activity_problem">ProblemActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_friend_bar">FriendBarActivity</string>

    <string name="facebook_app_id">1439619132775969</string>
    <string name="maps_api_key">AIzaSyAmZdoMDzyJxQm05JJdeUWYcjs70_eFCYI</string>

</resources>
