<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/main_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bar"
            android:icon="@drawable/ic_menu_shop"
            android:title="@string/menu_bars" />
        <item
            android:id="@+id/nav_consumption"
            android:icon="@drawable/ic_menu_local_bar"
            android:title="@string/menu_consumption" />
        <item
            android:id="@+id/nav_payment"
            android:checkable="false"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/menu_payment" />
    </group>

    <group android:id="@+id/bar_menu" android:checkableBehavior="single" android:visible="false">

    </group>
    <item android:id="@+id/other_menu" android:title="@string/menu_type_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_condition"
                android:icon="@drawable/ic_menu_condition"
                android:title="@string/menu_condition" />
            <item
                android:id="@+id/nav_problem"
                android:icon="@drawable/ic_menu_problem"
                android:title="@string/menu_problem" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_information"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
