<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sao.mobile.sao.ui.activity.OrderActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingTop="@dimen/base_card_view_margin_top_bottom"
        android:paddingLeft="@dimen/base_card_view_margin_top_bottom"
        android:paddingRight="@dimen/base_card_view_margin_top_bottom">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <android.support.v7.widget.CardView
                android:id="@+id/stepOrderCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/base_card_view_margin_left_right"
                    android:paddingLeft="@dimen/base_card_view_margin_left_right"
                    android:paddingTop="@dimen/base_card_view_margin_top_bottom"
                    android:paddingBottom="@dimen/base_card_view_margin_top_bottom">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_step_text"/>

                    <TextView
                        android:id="@+id/orderStepText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/base_card_view_margin_left_right">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/orderRecylerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="@dimen/base_card_view_margin_top_bottom"
                        android:layout_marginBottom="@dimen/base_card_view_margin_top_bottom"
                        android:background="@color/colorAccent"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textBlack"
                            android:textSize="14dp"
                            android:text="Total"/>

                        <TextView
                            android:id="@+id/totalPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textBlack"
                            android:textSize="14dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/orderDetailsConfirm"
                android:foreground="?attr/selectableItemBackground"
                android:background="@color/colorBackgroundAccent"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/confirm_info"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:text="@string/confirm_info1"
                android:gravity="center_horizontal" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
